--- a/jreactapp-resources/pom.xml
+++ b/jreactapp-resources/pom.xml
@@ -12,6 +12,31 @@
 
     <artifactId>jreactapp-resources</artifactId>
     <packaging>pom</packaging>
-    <description>holds common resources used to build installers</description>
+    <description>holds the resources used in the application bundle</description>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <attach>true</attach>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make shared resource</id>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>src/main/assembly/dependencies.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
