--- a/jreactapp-bootstrap/pom.xml
+++ b/jreactapp-bootstrap/pom.xml
@@ -14,4 +14,12 @@
     <packaging>jar</packaging>
     <description>This is the Application Entry Point</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.jreactapp</groupId>
+            <artifactId>jreactapp-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
