--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,11 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 .idea
 *.iml
-/node_modules
-/.pnp
+node_modules/
+.pnp/
 .pnp.js
-/coverage
-/build
+coverage/
+build/
 .DS_Store
 .env.local
 .env.development.local
