--- a/jreactapp-ui/pom.xml
+++ b/jreactapp-ui/pom.xml
@@ -15,20 +15,71 @@
     <description>holds common resources used to build installers</description>
 
     <properties>
-        <frontend.maven.version>1.4</frontend.maven.version>
+        <frontend.maven.version>1.10.3</frontend.maven.version>
+        <maven.resources.version>3.0.1</maven.resources.version>
         <node.version>v12.14.0</node.version>
         <yarn.version>v1.22.4</yarn.version>
+        <frontend.dependency.configs>src/main/webapp</frontend.dependency.configs>
     </properties>
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>${maven.resources.version}</version>
+                <executions>
+                    <!--
+                       Copy of the applicaction directory, coming from GIT, in /target directory
+                       executed before the compiling and build of frontend resources
+                       That dir will be the working directory of npm, bower, grunt
+                       in order to avoid the creation of the direcotries node, node_modules, bower_components, ...
+                       (they may be committed in repository)
+                    -->
+                    <execution>
+                        <id>copy-frontendResources-toStagingDir-beforeBuild</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>target/stagging</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/webapp</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+
+                    <!--execution>
+                        <id>position-react-build</id>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <phase>prepare-package</phase>
+                        <configuration>
+                            <outputDirectory>target/ui</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${frontend.dependency.configs}/build</directory>
+                                    <filtering>false</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution-->
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
                 <version>${frontend.maven.version}</version>
 
                 <configuration>
+                    <!-- where npm and yarn are installed -->
                     <installDirectory>target</installDirectory>
+                    <!-- where package.json is available -->
+                    <workingDirectory>target/stagging</workingDirectory>
                 </configuration>
 
                 <executions>
@@ -49,6 +100,16 @@
                         </goals>
                         <configuration>
                             <arguments>install</arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>build-frontend</id>
+                        <goals>
+                            <goal>yarn</goal>
+                        </goals>
+                        <phase>prepare-package</phase>
+                        <configuration>
+                            <arguments>build</arguments>
                         </configuration>
                     </execution>
                 </executions>
