--- a/jreactapp-api/pom.xml
+++ b/jreactapp-api/pom.xml
@@ -13,5 +13,20 @@
     <artifactId>jreactapp-api</artifactId>
     <packaging>jar</packaging>
     <description>holds common resources used to build installers</description>
+    <properties>
+        <jersey.version>2.32</jersey.version>
+    </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet-core</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-jetty-http</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
+    </dependencies>
 </project>
